[gd_scene load_steps=27 format=3 uid="uid://c70vjir2dc7r5"]

[ext_resource type="Script" path="res://Scripts/rat.gd" id="1_cvs5m"]
[ext_resource type="Material" uid="uid://cf3tuv5aidq14" path="res://Materials/highlight_material.tres" id="2_onx3l"]
[ext_resource type="Texture2D" uid="uid://dw8niig2iqeyh" path="res://Art/Rat/RatDead/RatDeadB.png" id="3_yvk86"]
[ext_resource type="Texture2D" uid="uid://bpopd62dscek3" path="res://Art/Rat/RatDead/RatDeadC.png" id="4_dg4g8"]
[ext_resource type="Texture2D" uid="uid://2gc7wldiryj4" path="res://Art/Rat/RatDead/RatDeadD.png" id="5_stud0"]
[ext_resource type="Texture2D" uid="uid://bd4q48gw7kwfw" path="res://Art/Rat/RatDead/RatDeadE.png" id="6_3va6k"]
[ext_resource type="Texture2D" uid="uid://iyhdx7bl21jj" path="res://Art/Rat/RatEat/RatEatA.png" id="7_xcr8t"]
[ext_resource type="Texture2D" uid="uid://457mraiygchr" path="res://Art/Rat/RatEat/RatEatB.png" id="8_6ugau"]
[ext_resource type="Texture2D" uid="uid://b4gng3kejx6ae" path="res://Art/Rat/RatEat/RatEatC.png" id="9_b6yo2"]
[ext_resource type="Texture2D" uid="uid://dq84sxomwsufq" path="res://Art/Rat/RatIdle.png" id="10_qtsmf"]
[ext_resource type="Texture2D" uid="uid://bxpfi86lkxu8y" path="res://Art/Rat/RatMove/RatMoveB.png" id="11_yot7h"]
[ext_resource type="Texture2D" uid="uid://byumm8peoeqeh" path="res://Art/Rat/RatMove/RatMoveA.png" id="12_nkkln"]
[ext_resource type="PackedScene" uid="uid://dbwv6ry1wdjpo" path="res://Scenes/sfx_manager.tscn" id="13_dps88"]
[ext_resource type="AudioStream" uid="uid://dgkbgmnkcj2m6" path="res://Audio/Rat/rat_squeek.mp3" id="14_lqgkb"]
[ext_resource type="AudioStream" uid="uid://dq8kbxsxk1nps" path="res://Audio/Rat/rat_eat.mp3" id="15_8mswm"]
[ext_resource type="AudioStream" uid="uid://pku6334frbc6" path="res://Audio/Rat/rat_hit_1.mp3" id="16_1ulmn"]
[ext_resource type="AudioStream" uid="uid://bemunbh37cf1a" path="res://Audio/Rat/rat_hit_2.mp3" id="17_vclga"]
[ext_resource type="AudioStream" uid="uid://cfqjbcxk4xcp1" path="res://Audio/Rat/rat_dying.mp3" id="18_pxknc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f7ori"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yvk86")
}, {
"duration": 1.0,
"texture": ExtResource("4_dg4g8")
}, {
"duration": 1.0,
"texture": ExtResource("5_stud0")
}, {
"duration": 1.0,
"texture": ExtResource("6_3va6k")
}, {
"duration": 1.0,
"texture": ExtResource("6_3va6k")
}, {
"duration": 1.0,
"texture": ExtResource("6_3va6k")
}, {
"duration": 1.0,
"texture": ExtResource("6_3va6k")
}, {
"duration": 1.0,
"texture": ExtResource("6_3va6k")
}],
"loop": false,
"name": &"die",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_xcr8t")
}, {
"duration": 1.0,
"texture": ExtResource("8_6ugau")
}, {
"duration": 1.0,
"texture": ExtResource("9_b6yo2")
}],
"loop": true,
"name": &"eat",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_qtsmf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_yot7h")
}, {
"duration": 1.0,
"texture": ExtResource("12_nkkln")
}],
"loop": true,
"name": &"move",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5mkuk"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8fw22"]
radius = 6.0

[sub_resource type="Animation" id="Animation_7obi5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x4adc"]
resource_name = "die"
length = 2.33337
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6, 7]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.33333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_die"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFXManager")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["Die"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_04flt"]
resource_name = "eat"
length = 1.00003
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"eat"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFXManager")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["Eat"],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ndqge"]
_data = {
"RESET": SubResource("Animation_7obi5"),
"die": SubResource("Animation_x4adc"),
"eat": SubResource("Animation_04flt")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_idx6q"]
streams_count = 2
stream_0/stream = ExtResource("16_1ulmn")
stream_1/stream = ExtResource("17_vclga")

[node name="Rat" type="CharacterBody2D" groups=["destructable", "rat"]]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_cvs5m")
interaction_radius = 12

[node name="LootSlot" type="Marker2D" parent="."]
position = Vector2(0, -4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_onx3l")
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_f7ori")
animation = &"die"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_5mkuk")

[node name="InteractableRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableRange"]
shape = SubResource("CircleShape2D_8fw22")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ndqge")
}

[node name="CargoStealTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SFXManager" parent="." instance=ExtResource("13_dps88")]

[node name="Squeak" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("14_lqgkb")
max_distance = 730.0
bus = &"Rats"

[node name="Eat" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("15_8mswm")
pitch_scale = 1.7
bus = &"Rats"

[node name="Hit" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = SubResource("AudioStreamRandomizer_idx6q")
bus = &"Rats"

[node name="Die" type="AudioStreamPlayer2D" parent="SFXManager"]
stream = ExtResource("18_pxknc")
pitch_scale = 0.75
bus = &"Rats"

[connection signal="body_entered" from="InteractableRange" to="." method="_on_interactable_range_body_entered"]
[connection signal="body_exited" from="InteractableRange" to="." method="_on_interactable_range_body_exited"]
[connection signal="timeout" from="CargoStealTimer" to="." method="_on_cargo_steal_timer_timeout"]
